# wakeywakey

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
scripts/: deploy.sh
tests/: __init__.py  test_audio.py  test_detector.py  test_integration.py
wakeywakey/: __init__.py  __main__.py
wakeywakey/cli/: __init__.py  console.py  main.py
wakeywakey/core/: __init__.py  audio.py  detector.py
wakeywakey/models/: __init__.py  architectures.py  optimization.py
wakeywakey/training/: __init__.py  augmentation.py  dataset.py  trainer.py
wakeywakey/utils/: __init__.py  config.py  file_utils.py  metrics.py
